# FastApiJWT

./: README.MD  create_fasapi_app.py  main.py  pyproject.toml
alembic/: env.py
api_v1/users/: crud.py  schemas.py  views.py
auth/: helpers.py  schemas.py  utils.py  validation.py  views.py
core/: config.py
db/: __init__.py  database.py  depends.py  instructions.txt  models.py
docker/: docker-compose.yml
